@@ -1,14 +1,14 @@
 {
-  "timestamp" : "2022-09-11T08:07:44Z",
+  "timestamp" : "2022-09-11T16:07:05Z",
   "count_outdated" : 1770,
   "uniques_outdated" : 534,
-  "count" : 1797,
+  "count" : 1796,
   "uniques" : 551,
   "clones" : [
     {
       "timestamp": "2022-08-28T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 4 ],
+      "count": 1,
+      "count_minmax": [ 1, 4 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 2 ]
     },
