@@ -1,3 +1,11 @@
+2022-09-11T16:07:05Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3032471194
+* notice: last 14d: unq all: 6 26
+* notice: prev accum: outdated-unq outdated-all / unq all: 534 1770 / 551 1797
+* notice: next accum: outdated-unq outdated-all / unq all: 534 1770 / 551 1796
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +2 +4 -1 -3 / 1 1
+* notice: removed / changed dates: [] / [2022-08-28]
+
 2022-09-11T08:07:44Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3031066739
 * notice: last 14d: unq all: 6 27
